LPS-132211 Fix blog card overflow for Time To Read

--- a/modules/apps/frontend-theme/frontend-theme-classic/src/css/components/_widget.scss
+++ b/modules/apps/frontend-theme/frontend-theme-classic/src/css/components/_widget.scss
@@ -61,6 +61,7 @@
 		margin-bottom: 16px;
 
 		.inline-item-before {
+			flex-shrink: 1;
 			margin-right: 1rem;
 		}
 
